# Course_6_Coursework

./: README.md  blog_data.json  groups_data_utf8.json  mailind_data.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: apscheduler_run.py
mailing/migrations/: 0001_initial.py  0002_client_owner.py  0003_mail_mailingsrv_mail_mailings_log.py  0004_alter_client_options.py  0005_alter_mail_options_alter_mailingsrv_options.py
mailing/templates/mailing/: base_template.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mail_confirm_delete.html  mail_detail.html  mail_form.html  mail_list.html  mailingsrv_confirm_delete.html  mailingsrv_detail.html  mailingsrv_form.html  mailingsrv_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
mailing/templatetags/: my_tags.py
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: confirm_registration_user.html  login.html  password_recovery_message.html  reset_password.html  user_form.html  user_list.html
