[tool.poetry]
name = "course-6-coursework"
version = "0.1.0"
description = ""
authors = ["Vladimir Titov <tvv-vg@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
pillow = "^10.3.0"
django-apscheduler = "^0.6.2"
python-dateutil = "^2.9.0.post0"
pytils = "^0.4.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'